--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
   <footer class="site-footer">
     <div class="footer-top">
       <a href="/" class="footer-logo-link" aria-label="หน้าแรก">
-        <img src="images/Logo.png" alt="โลโก้" class="footer-logo-img" />
+        <img src="images/logo.png" alt="โลโก้" class="footer-logo-img" />
       </a>
 
       <div class="footer-links">
